- stop zoom in on mobile contact form

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -16,6 +16,7 @@
     padding: .5rem .5rem;
     background: none;
     color: var(--title-colour);
+    font-size: 16px;
 }
 .contact-input::placeholder {
     color: var(--text-colour);
